@@ -1,8 +1,11 @@
 package com.openrsc.server.net;
 
 import io.netty.buffer.ByteBuf;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 public class Packet {
+	private static final Logger LOGGER = LogManager.getLogger();
 	/**
 	 * Next Packet Number
 	 */
@@ -124,7 +127,7 @@ public class Packet {
 		try {
 			return (short) ((short) ((payload.readByte() & 0xff) << 8) | (short) (payload.readByte() & 0xff));
 		} catch (Exception e) {
-			System.out.println("Error reading packet (short)");
+			LOGGER.warn("Error reading packet (short)");
 			return 0;
 		}
 	}
@@ -230,24 +233,28 @@ public class Packet {
 	}
 
 	public static void printPacket(Packet packet, String direction) {
+		if (!LOGGER.isDebugEnabled()) return;
 		int length = packet.getReadableBytes();
 		int opcode = packet.getID();
 		ByteBuf buffer = packet.getBuffer();
-		System.out.print(String.format("%s Packet Opcode %d:", direction, opcode));
+		var sb = new StringBuilder();
+		sb.append("%s Packet Opcode %d:".formatted(direction, opcode));
 		for (int i=0; i < length; i++) {
-			System.out.print(String.format(" %d", Byte.toUnsignedInt(buffer.readByte())));
+			sb.append(" %d".formatted(Byte.toUnsignedInt(buffer.readByte())));
 		}
-		System.out.println();
+		LOGGER.debug(sb.toString());
 		buffer.resetReaderIndex();
 	}
 	public static void printBuffer(ByteBuf buffer, String direction) {
+		if (!LOGGER.isDebugEnabled()) return;
 		ByteBuf bufferDup = buffer.duplicate();
 		bufferDup.resetReaderIndex();
 		int length = bufferDup.readableBytes();
-		System.out.print(String.format("%s Packet:", direction));
+		var sb = new StringBuilder();
+		sb.append("%s Packet:".formatted(direction));
 		for (int i=0; i < length; i++) {
-			System.out.print(String.format(" %d", Byte.toUnsignedInt(bufferDup.readByte())));
+			sb.append(" %d".formatted(Byte.toUnsignedInt(bufferDup.readByte())));
 		}
-		System.out.println();
+		LOGGER.debug(sb.toString());
 	}
 }
